fix datepicker z-index fix resetting search click thead to reset category transaction filter

--- a/views/app/index.less
+++ b/views/app/index.less
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -24,6 +24,10 @@ th {
 
 select, .Select {
   min-width: 150px;
+}
+
+.react-datepicker-popper {
+  z-index: 2 !important;
 }
 
 .selectedCategoryTable {
